// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinGroupScreen onSearch should set community after entering 6th digit 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              undefined,
            ]
          }
        >
          Join a Community
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "minHeight": 400.2,
            },
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../assets/images/MemberContacts_light.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "padding": 4,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Enter your Community Code
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "paddingHorizontal": 30,
              "paddingTop": 10,
            },
            Object {},
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={false}
          blurOnSubmit={false}
          maxLength={6}
          multiline={false}
          onChangeText={[Function]}
          placeholderTextColor="#505256"
          rejectResponderTermination={true}
          selectionColor="#ffffff"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": 24,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 36,
                "fontStyle": "normal",
                "lineHeight": 44,
                "padding": 8,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="joinInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value="123456"
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`JoinGroupScreen onSearch should set input without calling serach has < 6 digits 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              undefined,
            ]
          }
        >
          Join a Community
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "minHeight": 400.2,
            },
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../assets/images/MemberContacts_light.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "padding": 4,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Enter your Community Code
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "paddingHorizontal": 30,
              "paddingTop": 10,
            },
            Object {},
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={false}
          blurOnSubmit={false}
          maxLength={6}
          multiline={false}
          onChangeText={[Function]}
          placeholderTextColor="#505256"
          rejectResponderTermination={true}
          selectionColor="#ffffff"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": 24,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 36,
                "fontStyle": "normal",
                "lineHeight": 44,
                "padding": 8,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="joinInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value="123"
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`JoinGroupScreen renders group card correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              undefined,
            ]
          }
        >
          Join a Community
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "minHeight": 400.2,
            },
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "elevation": 4,
              "flexDirection": "row",
              "marginHorizontal": 16,
              "marginVertical": 8,
              "opacity": 1,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 2,
            }
          }
          testID="CardButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#005A7F",
                  "borderRadius": 4,
                  "height": 403.875,
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "www.missionhub.com",
                }
              }
              style={
                Object {
                  "borderRadius": 4,
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0.6)",
                    "borderBottomLeftRadius": 4,
                    "borderBottomRightRadius": 4,
                    "bottom": 0,
                    "left": 0,
                    "padding": 13,
                    "position": "absolute",
                    "right": 0,
                  },
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Bold",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlignVertical": "center",
                      "textTransform": "uppercase",
                    }
                  }
                >
                  ORG NAME
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontSize": 12,
                    }
                  }
                >
                  Owner O (Owner)
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#FF5532",
                      "borderRadius": 12,
                      "margin": 5,
                      "opacity": 1,
                      "paddingHorizontal": 20,
                      "paddingVertical": 5,
                    }
                  }
                  testID="JoinButton"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#ffffff",
                          "fontFamily": "SourceSansPro-Bold",
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "letterSpacing": 1,
                          "lineHeight": 18,
                          "textAlign": "center",
                          "textAlignVertical": "center",
                          "textTransform": "uppercase",
                        },
                        Object {
                          "color": "#ffffff",
                          "fontSize": 14,
                        },
                      ]
                    }
                  >
                    JOIN
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "paddingHorizontal": 30,
              "paddingTop": 10,
            },
            Object {},
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={false}
          blurOnSubmit={false}
          maxLength={6}
          multiline={false}
          onChangeText={[Function]}
          placeholderTextColor="#505256"
          rejectResponderTermination={true}
          selectionColor="#ffffff"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": 24,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 36,
                "fontStyle": "normal",
                "lineHeight": 44,
                "padding": 8,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="joinInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value="123456"
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`JoinGroupScreen renders start correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              undefined,
            ]
          }
        >
          Join a Community
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "minHeight": 400.2,
            },
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../assets/images/MemberContacts_light.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "padding": 4,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Enter your Community Code
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 5,
              "paddingHorizontal": 30,
              "paddingTop": 10,
            },
            Object {},
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={false}
          blurOnSubmit={false}
          maxLength={6}
          multiline={false}
          onChangeText={[Function]}
          placeholderTextColor="#505256"
          rejectResponderTermination={true}
          selectionColor="#ffffff"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": 24,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 36,
                "fontStyle": "normal",
                "lineHeight": 44,
                "padding": 8,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="joinInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value=""
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
